# minicrc

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md
include/minicrc/: minicrc.hpp
test/: main.cpp
